final version of ejercise

--- a/sprint-2/unit-2/creating-animation-learning-edition/css/main.css
+++ b/sprint-2/unit-2/creating-animation-learning-edition/css/main.css
@@ -1,12 +1,13 @@
-div {
+div.row {
 	height:1em;
+	/*outline:1px solid blue;*/
 }
 
-span {
+div.row > span {
 	display:inline-block;
 	outline:1px solid #CCC;
-	width:1em;
-	height:100%;
+	width: 1em;
+	height: 100%;
 }
 
 span.blue {
