--- a/sprint-2/unit-2/firebase-snakes/css/main.css
+++ b/sprint-2/unit-2/firebase-snakes/css/main.css
@@ -23,7 +23,7 @@ div.row:nth-child(even) > span:nth-child(even) {
 	background-color: #F44;
 }
 #green {
-	background-color: #4F4;
+	background-color: #0A0;
 }
 #blue {
 	background-color: #44F;
@@ -33,8 +33,8 @@ div.row:nth-child(even) > span:nth-child(even) {
 }
 
 #cyan {
-	background-color: #4FF;
+	background-color: #0AA;
 }
 #yellow {
-	background-color: #FF4;
+	background-color: #AA0;
 }
